tests/errors/pandas_index_length.ki
var pd = import("pandas")
var s = pd.Series([1, 2, 3], index=["a", "b"])
